# dkp-demo

./: .env.example  .gitignore  Dockerfile  README.md  SETUP_SUMMARY.md  deploy-all.sh  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  requirements.txt
agent/: Dockerfile  pyproject.toml
agent/knowledge/trusses-ai-english/: translation-notes.txt
agent/knowledge/trusses-ai-english/001IK26A - Matlúch_House/: translation-notes.txt
agent/knowledge/trusses-ai-english/002IK26A - Matlúch_Garage/: translation-notes.txt
agent/knowledge/trusses-ai-english/003IK26A - BigMat Dinostav_Domanicka/: translation-notes.txt
agent/knowledge/trusses-ai-english/006IK26A - SAKRA Group_Hrušovská/: translation-notes.txt
agent/knowledge/trusses-ai-english/015IK26A - Slážik_Family House Belince/: translation-notes.txt
agent/knowledge/trusses-ai-english/022IK26B - Plecho_Filová/: translation-notes.txt
agent/knowledge/trusses-ai-english/027IK26B - BigMat Sumega_Chalupiansky/: translation-notes.txt
agent/knowledge/trusses-ai-english/028IK26A - BigMat Skalica_REDIP/: translation-notes.txt
agent/knowledge/trusses-ai-english/029IK26A - Bigmat Skalica_Zeleňáková/: translation-notes.txt
agent/knowledge/trusses-ai-english/032IK26A - Nagy/: translation-notes.txt
agent/knowledge/trusses-ai-english/033JO26A - SIPKON_Mikloš/: translation-notes.txt
agent/knowledge/trusses-ai-english/034IK26B - Boča_Vyhnálik/: translation-notes.txt
agent/src/: agent.py  agent_template.py  main.py
(+501 files in other folders)
